# n2d

./: CMakeLists.txt  CMakePresets.json  agents.md  readme.md  vcpkg-configuration.json  vcpkg.json
apps/: n2d_cli.cpp
docs/: Agents.md  DESIGN.md
include/n2d/core/: error.hpp
include/n2d/io/: inspect.hpp
src/io/: inspect.cpp
tests/: CMakeLists.txt
